--- a/index.html
+++ b/index.html
@@ -2,26 +2,228 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>gingsero.github.io</title>
+
+<style type="text/css">
+		* {
+			margin: 0;
+		}
+		
+		body {
+				padding: 0;
+				margin: 0;
+				background-color: #F3F9FC;;
+		}
+		
+		#navLeft {
+			width: 50%;
+			height : 100px;
+			float: left;
+			background-color: #4AB58C;
+			font-size: 24px;
+			color: white;
+			text-align: center;
+			
+		}
+		#navRight {
+			width: 50%;
+			height : 100px;
+			float: left;
+			background:hsla(22, 63%, 25%, 1.0);
+			overflow: hidden;
+		}
+		#inputspan {
+			padding-right:10px;
+			float:right;
+		}
+		#search {
+			width : 90px;
+			height: 40px;
+			background-color:white;
+			
+		}
+		
+		nav > div > ul {
+			overflow: hidden;
+			background:hsla(22, 63%, 25%, 1.0);
+		}
+		
+		nav > div > ul > li {
+			list-style: none;
+			float: left;
+			padding: 20px;
+			text-align: center;
+		}
+		nav > div > ul > li > a {
+			color:white;
+			font-size:20px;
+			text-decoration: none;
+		}
+		nav > div > ul > li > a:VISITED{
+			color : blue;
+			font-style: oblique;
+			font-weight: bold;
+		}
+		
+		#welcome {
+			color:white;
+			font-size:20px;
+			font-style:italic;
+			background-color:#DD4B22;
+		}
+		
+		#welcome > ul > li{
+			list-style: none;
+		}
+		
+		#linklist {
+			background: #F3F9FC;/* #C9F3DF  */ 
+			padding : 0%;
+			margin : 0%;
+		}
+		
+		#linklist > ul > li{
+			list-style: none;
+			padding : 5px;
+		}
+		
+		#linklist > ul > li > a{
+			color:black;
+			font-size:32px;
+			text-decoration: none;
+		}
+		
+		.my {
+			width: 30px;
+			height: 30px;
+		}
+		
+		#projectlist {
+			width:900px;
+			height:400px;
+			position: absolute;
+			right: 40px;
+			top: 180px;
+			border: 1px solid black;
+		}
+		
+		#spanOne {
+			width: 100%;
+			height: 130px;
+			color:white;
+			background: silver;
+			text-align: right;
+			float:left;
+			margin-top:50px;
+		}
+		
+		#spanOne > ul > li {
+			list-style: none;
+		}
+		
+		footer {
+			text-align: center;
+		}
+		
+</style>
+<!-- // ------------------------------------------ ìžë°” ìŠ¤í¬ë¦½íŠ¸ ----------------------------------->
+<script type="text/javascript">
+		/* ëŒ€ë¬¸ ê¸€, ê²Œì‹œíŒ list ëª¨ë‘ ë§ˆìš°ìŠ¤ ì˜¬ë¦¬ë©´ ìƒ‰ ë³€í•˜ê²Œ */
+		/*  */
+
+</script>
+
+
+<!-- // ------------------------------------------ ë³¸ë¬¸ ì˜ì—­ --------------------------------------->
 </head>
 <body>
-			<h1> ±è´ëÈñÀÇ È¨ÆäÀÌÁöÀÔ´Ï´Ù.</h1>
-			<p>¾î¶² ¹®Á¦¸¦ ÇØ°áÇÏ±â À§ÇØ ¸íÈ®È÷ Á¤ÀÇµÈ(well-defined) À¯ÇÑ °³ÀÇ ±ÔÄ¢°ú ÀýÂ÷ÀÇ ¸ðÀÓ. 
-			¸íÈ®È÷ Á¤ÀÇµÈ ÇÑÁ¤µÈ °³¼öÀÇ ±ÔÁ¦³ª ¸í·ÉÀÇ ÁýÇÕÀÌ¸ç, ÇÑÁ¤µÈ ±ÔÄ¢À» Àû¿ëÇÔÀ¸·Î½á ¹®Á¦¸¦ ÇØ°áÇÏ´Â °Í. 
-			ÀÌ ¿ë¾î ÀÚÃ¼´Â 1957³â ÀÌÀüÀÇ À¥½ºÅÍ(webster) »çÀü¿¡´Â ½Ç·Á ÀÖÁö ¾Ê´Ù. 
-			¾Æ¶óºñ¾Æ ¼ýÀÚ¸¦ »ç¿ëÇÏ¿© ¿¬»êÀ» ÇàÇÏ´Â ¼ö¼øÀ» ÀÇ¹ÌÇÑ´Ù. 
-			¾Ë°í¸®ÁòÀº ºÎ¿©µÈ ¹®ÀÚ°¡ ¼öÇÐÀûÀÎÁö ºñ¼öÇÐÀûÀÎÁö, 
-			¶Ç »ç¶÷ÀÇ ¼ÕÀ¸·Î ¹®Á¦¸¦ ÇØ°áÇÒ °ÍÀÎÁö, ÄÄÇ»ÅÍ·Î ÇØ°áÇÒ °ÍÀÎÁö¿¡ °ü°è¾øÀÌ Àû¿ëµÈ´Ù. 
-			Æ¯È÷ ÄÄÇ»ÅÍ·Î ¹®Á¦¸¦ Çª´Â °æ¿ì¿¡´Â ¾Ë°í¸®ÁòÀ» Çü½ÄÀûÀ¸·Î Ç¥ÇöÇÏ´Â °ÍÀÌ ÇÁ·Î±×·¥À» ÀÛ¼ºÇÏ´Â µ¥ Áß¿äÇÑ ¿ä¼Ò°¡ µÈ´Ù. 
-			ÀÌ ¾Ë°í¸®ÁòÀÇ ÁÁ°í ³ª»Ý¿¡ µû¶ó °°Àº °á°ú¸¦ ±¸ÇÏ´Â Ã³¸®¿¡¼­µµ ½Ã°£ÀÌ³ª Á¶ÀÛ¼º¿¡ Å« Â÷ÀÌ°¡ ³¯ ¼ö°¡ ÀÖ´Ù. 
-			¾Ë°í¸®ÁòÀº ´ÙÀ½ Á¶°ÇÀ» ¸¸Á·ÇØ¾ß ÇÑ´Ù.
-¨ç ÀÔ·Â£º¿ÜºÎ¿¡¼­ Á¦°øµÇ´Â ÀÚ·á°¡ ÀÖÀ» ¼ö ÀÖ´Ù.
-¨è Ãâ·Â£ºÀû¾îµµ ÇÑ °¡Áö °á°ú°¡ »ý±ä´Ù.
-¨é ¸í¹é¼º£º°¢ ¸í·ÉµéÀº ¸í¹éÇØ¾ß ÇÑ´Ù.
-¨ê À¯ÇÑ¼º£º¾Ë°í¸®ÁòÀÇ ¸í·É´ë·Î ¼öÇàÇÏ¸é ÇÑÁ¤µÈ ´Ü°è¸¦ Ã³¸®ÇÑ ÈÄ¿¡ Á¾·áµÈ´Ù.
-¨ë È¿°ú¼º£º¸ðµç ¸í·ÉµéÀº ¸í¹éÇÏ°í ½ÇÇà °¡´ÉÇÑ °ÍÀÌ¾î¾ß ÇÑ´Ù. ¾î¿øÀº 9¼¼±âÀÇ °úÇÐÀÚ al KhorezmiÀÇ ÀÌ¸§¿¡¼­ À¯·¡ÇÑ´Ù.
-
-
-			</p>
+			
+			<nav>
+				<div id = "navLeft">
+					<h1>""ì˜ í™ˆíŽ˜ì´ì§€</h1>
+				</div>
+				
+				<div id = "navRight">
+					<ul>
+						<li><a href = "#">HOME</a></li>
+						<li><a href = "#">ê°œë°œ</a></li>
+						<li><a href = "#">í”„ë¡œì íŠ¸</a></li>
+						<li><a href = "#">ë‹¬ë ¥</a></li>
+						<li><a href = "#">ê²Œì‹œíŒ</a></li>
+					</ul>
+					<span id = "inputspan">
+						<input type = "text" id = "search1">
+						<input type = "button" id = "search2" value ="ê²€ìƒ‰">
+					</span>
+				</div>
+			</nav>
+			
+			<!-- ë™ì  ì´ë¯¸ì§€ êµ¬í˜„ ê³µê°„ -->
+			<div id = "welcome">	
+				<h3>ê¹€ëŒ€í¬</h3>
+				<ul>
+					<li>í˜„ ê°œë°œìž ì·¨ì—… ì¤€ë¹„ì¤‘</li>
+					<li>í…ì…€ë„¤íŠ¸ì»´ ICTì‚¬ì—…ë¶€ ì¸í„´</li>
+					<li>2014ë…„ 2ì›” ê²½ìƒëŒ€í•™êµ ì •ë³´í†µì‹ ê³µí•™ê³¼ ì¡¸ì—…</li>
+					<li>2010ë…„ 6ì›” ì „ë‚¨ ë‚˜ì¤‘ 1ì¤‘ëŒ€ ì „ì—­</li>
+					<li>2007ë…„ 3ì›” ê²½ìƒëŒ€í•™êµ ìž…í•™</li>
+					<li>2004ë…„ 3ì›” í•œì˜ê³ ë“±í•™êµ ìž…í•™</li>
+					<br>
+				</ul>
+			</div>	
+			
+			<!-- ë§í¬ ëª©ë¡ -->
+			<div id = "linklist">
+				<ul>
+					<li><a href = "http://blog.naver.com/gingsero/220390487074">
+					<img src = "../images//blog.jpg" class = "my"> ë„¤ì´ë²„ ë¸”ë¡œê·¸</a></li>
+					<li><a href = "http://cafe.naver.com/itstudy15">
+					<img src = "../images/cafe.JPG" class = "my"> ì¹´íŽ˜ ë§¤ë‹ˆì €</a></li>
+					<li><a href = "https://www.facebook.com/">
+					<img src = "../images/facebook.jpg" class = "my"> íŽ˜ì´ìŠ¤ë¶</a></li>
+					<li><a href = "http://www.twitter.com/">
+					<img src = "../images/twit.jpg" class = "my"> íŠ¸ìœ„í„°</a></li>
+					<li><a href = "https://github.com/">
+					<img src = "../images/github.jpg" class = "my"> Git Hub</a></li>
+				</ul>
+					
+			</div>
+			
+			<!-- <div id = "picture">
+					<img src = "../CSSTest/monsoon.jpg" width="900px" height="400px">
+			</div> -->
+			
+			<div id = "projectlist">
+				<table>
+					<tr>
+						<td class="project" width = "300px" height = "200px"><img src="../images/bear.jpg" width="100%" height="100%"></td>
+						<td class="project" width = "300px" height = "200px"><img src="../images/fox.jpg" width="100%" height="100%"></td>
+						<td class="project" width = "300px" height = "200px"><img src="../images/puppy.jpg" width="100%" height="100%"></td>
+					</tr>
+					<tr>
+						<td class="project" width = "300px" height = "200px"><img src="../images/racoon.jpg" width="100%" height="100%"></td>
+						<td class="project" width = "300px" height = "200px"><img src="../images/so.jpg" width="100%" height="100%"></td>
+						<td class="project" width = "300px" height = "200px"><img src="../images/tiger.jpg" width="100%" height="100%"></td>
+					</tr>
+				</table>
+			</div>
+			
+			<div id = "spanOne">
+					<ul>
+						<h3>ë™ë¬¸íšŒ</h3>
+						<li><img src="../images/1gnu.jpg"/>ê²½ìƒëŒ€í•™êµ ë™ë¬¸íšŒ</li>
+						<li><img src="../images/1han.jpg">í•œì˜ê³ ë“±í•™êµ ë™ë¬¸íšŒ</li>
+						<li><img src="../images/1gubong.jpg">êµ¬ë´‰ì¤‘í•™êµ ë™ë¬¸íšŒ</li>
+					</ul>
+			</div>
+			
+			<hr>
+			<footer>
+					<br>
+					copyright@    since  2015 / 06 / 15
+					<br>
+					<br>
+			</footer>
+			
 </body>
 </html>
